test/visibility/submodule-in-file/errors/WrongModule2Wrong.chpl
module WrongModule2 {
  include module SubModule;
  proc main() {
  }
}
