test/visibility/submodule-in-file/errors/WrongModule2Wrong.good
WrongModule2Wrong.chpl:2: error: Cannot include modules from a module whose name doesn't match its filename
